syntax = "proto3";

package event;
option go_package = "github.com/figment-networks/polkadothub-proxy/grpc/event/eventpb";

message EventData {
  string name = 1;
  string value = 2;
}

message Event {
  int64 index = 1;
  repeated EventData data = 2;
  string phase = 3;
  string method = 4;
  string section = 5;
  string description = 6;
  int64 extrinsicIndex = 7;
  string error = 8;
  string raw = 9;
}

message GetByHeightRequest {
  int64 height = 1;
}

message GetByHeightResponse {
  repeated Event events = 1;
}

service EventService {
  rpc GetByHeight (GetByHeightRequest) returns (GetByHeightResponse) {}
}

